fixed hero image size on mobile

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -64,6 +64,7 @@
     .hero img{
         margin-top: 120px;
         width: 260px;
+        height: 260px;
     }
     .hero h1{
         margin-top: 50px;
